src/test/ui/closures/closure-expected.stderr
error[E0277]: expected a `FnOnce<()>` closure, found `{integer}`
  --> $DIR/closure-expected.rs:3:23
   |
LL |     let y = x.or_else(4);
   |               ------- ^ expected an `FnOnce<()>` closure, found `{integer}`
   |               |
   |               required by a bound introduced by this call
   |
   = help: the trait `FnOnce<()>` is not implemented for `{integer}`
   = note: wrap the `{integer}` in a closure with no arguments: `|| { /* code */ }`
note: required by a bound in `Option::<T>::or_else`
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL |         F: ~const FnOnce() -> Option<T>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Option::<T>::or_else`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
